# pet_cinema

./: .gitignore  README.md  docker-compose.yaml
.github/workflows/: admin-lint.yml
movies_admin/: Dockerfile  README.md  pyproject.toml
movies_admin/.github/workflows/: admin-lint.yml
movies_admin/config/: settings.py  urls.py
movies_admin/config/components/: database.py
movies_admin/movies/: admin.py  models.py
movies_admin/movies/locale/en/LC_MESSAGES/: django.po
movies_admin/movies/locale/ru/LC_MESSAGES/: django.po
movies_admin/movies/migrations/: 0001_initial.py
nginx/: Dockerfile  entrypoint.sh
nginx/templates/: admin_panel.conf.template
schema_design/: Dockerfile  README.md  schema.ddl
sqlite_to_postgres/: Dockerfile  data_types.py  main.py  postgres.py  pyproject.toml  sqlite.py
