[tool.poetry]
name = "movies-admin"
version = "0.1.0"
description = ""
authors = ["pakum <makcayka2000@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.1"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
django-debug-toolbar = "^4.2.0"
django-split-settings = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
